overlays, texts, clean stylesheets, animations

--- a/app/assets/stylesheets/fonts.scss
+++ b/app/assets/stylesheets/fonts.scss
@@ -1,4 +1,12 @@
 @font-face {
+font-family: 'Open Sans', sans-serif;
+}
+
+@font-face {
+font-family: 'Raleway', sans-serif;
+}
+
+@font-face {
   font-family: 'Gotham Light';
   src: url(font-path('gotham_light/gotham_light.ttf')) format('opentype');
   font-weight: 200;
