--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -30,68 +30,232 @@
   <div class="container-fluid">
     <div class="row kostya centered">
       <div class="col-md-4 col-sm-4 col-xs-4">
-        <%= image_tag "luna.png", class: "img-responsive luna"%>
+        <%= image_tag "luna.png", class: "img-responsive luna animated fadeIn"%>
       </div> 
       <div class="col-md-4 col-sm-4 col-xs-4">
-        <h1>Kostya</h1>
+        <h1 class="animated fadeIn">Kostya</h1>
       </div> 
       <div class="col-md-4 col-sm-4 col-xs-4">
-        <%= image_tag "cometa.png", class: "img-responsive cometa"%>
+        <%= image_tag "cometa.png", class: "img-responsive cometa animated fadeIn"%>
       </div>  
     </div> <!-- /row -->
 
     <div class="row">
       <div class="col-md-12 col-sm-12 col-xs-12">
-        <h2>Parsi Fal</h2>
-        <h2>Alpar Sif</h2>
-        <h2>Arsif Alp</h2>
-        <h2><strong>FAL PARSI</strong></h2>
+        <h2 class="animated fadeIn">Parsi Fal</h2>
+        <h2 class="animated fadeIn">Alpar Sif</h2>
+        <h2 class="animated fadeIn">Arsif Alp</h2>
+        <h2 class="animated fadeIn"><strong>FAL PARSI</strong></h2>
       </div>
     </div> <!-- /row -->
   </div> <!-- /container -->   
+</section> <!-- /intro -->
 
+<section id="vic">
   <div class="container-fluid">
-    <div class="row nubes centered">  
-      <div class="col-md-4 col-sm-4 col-xs-4">
-        <%= link_to (image_tag "team/pablo.jpg", class: "img-responsive center-block teammate"), "#victoria", class: "popup-with-zoom-anim"%>
-
-        <h3>Victoria</h3>
-            <div id="victoria" class="zoom-anim-dialog mfp-hide small-dialog">
-            <h3>Victoria</h3>
-            <p class="rol">Mi nombre es Pablo y mi pasión es aprender.<BR>Creo firmemente que el emprendimiento junto con los principios de una sociedad libre son el camino hacia una Guatemala prospera. Por ello he decidido dedicar mis esfuerzos a la creación de proyectos empresariales que atiendan problemas sociales de forma sostenible y a largo plazo.  También me gustan los seguros, lo británico y las piñas.</p>
+    <div class="row centered">  
+      <div class="col-md-12 col-sm-12 col-xs-12">
+        <%= link_to ("Victoria"), "#victoria", class: "popup-with-zoom-anim"%>
+          <div id="victoria" class="zoom-anim-dialog mfp-hide small-dialog">
+            <div class="col-md-12 col-sm-12 col-xs-12">
+              <h3>Victoria</h3>
             </div>
+            <div class="col-md-6 col-sm-6 col-xs-12">
+              <pre>
+Take what you wanna take,
+I’m free lender, I do surrender to this game.
+And although, I see the shimmering place
+that feeds your wisdom,
+that pulls you indoors to play
+(just stay).
+
+Hand, I can give you my hand,
+A tool to render the path declaring our way.
+And foremost, I’m the only home you left.
+I'm a warm tissue to keep you clear and safe
+(just stay).
+
+To take the lead today,
+to give away 
+the feels that were hardly seen.
+It’s all about...
+              </pre>
+            </div>
+            <div class="col-md-6 col-sm-6 col-xs-12">
+              <pre>
+A thousand men in me
+ready and made
+to wildly guard your full-of-blue reign.
+It’s all about my love.
+
+So we hold any winner’s chance
+to try until our freedom keep us apart.
+So take what you wanna take,
+I’m free lender, I do surrender to any game.
+              </pre>
+            </div>
+          </div>  
       </div>  
     </div> <!-- /row --> 
   </div> <!-- /container -->
-</section> <!-- /intro -->
+</section> <!-- /victoria -->
 
-<section id="emisario">
-  <div class="container">
-    <div class="row centered">
+<section id="emi">
+  <div class="container-fluid">
+    <div class="row centered">  
       <div class="col-md-12 col-sm-12 col-xs-12">
-        <h3>Emisario</h3>
-      </div>
-    </div>
+        <%= link_to ("Emisario"), "#emisario", class: "popup-with-zoom-anim"%>
+          <div id="emisario" class="zoom-anim-dialog mfp-hide small-dialog">
+            <div class="col-md-12 col-sm-12 col-xs-12">
+              <h3>Emisario</h3>
+            </div>
+            <div class="col-md-6 col-sm-6 col-xs-12">
+              <pre>
+Si amanece bajo el puente una estrella cubierta de cobre
+en el vientre de una loba en celo
+que guarde en su brillo un beso caliente,
+seré yo quien le recoja con manos fuertes,
+le envuelva en tiras de anis, sal de mar y charol.
+
+Y me envuelve otra vez.
+              </pre>
+            </div>
+            <div class="col-md-6 col-sm-6 col-xs-12">
+              <pre>
+Me até al camino con los Andes en mi huellas.
+El alba nueva, con la nieve quieta, un callejón blanco
+Bajo las aguas de animales, en riscos, ensenadas.
+Un pulso sobre la Tierra, un emisario de rigor
+para entregarle el beso a tus labios de sol. 
+
+Y me envuelve otra vez.
+              </pre>
+            </div>
+          </div>  
+      </div>  
+    </div> <!-- /row --> 
   </div> <!-- /container -->
 </section> <!-- /emisario -->
 
-<section id="letanias">
-  <div class="container">
-    <div class="row centered">
+<section id="let">
+  <div class="container-fluid">
+    <div class="row centered">  
       <div class="col-md-12 col-sm-12 col-xs-12">
-        <h3>Letanías</h3>
-      </div>
-    </div>
+        <%= link_to ("Letanías"), "#letanias", class: "popup-with-zoom-anim"%>
+          <div id="letanias" class="zoom-anim-dialog mfp-hide small-dialog">
+            <div class="col-md-12 col-sm-12 col-xs-12">
+              <h3>Letanías</h3>
+            </div>
+            <div class="col-md-6 col-sm-6 col-xs-12">
+              <pre>
+El calor de la noche 
+que pega nuestras espaldas
+
+y talla una columna de oro
+al filo de la hoja de una espada encantada:
+
+Te mueves, espejismo de lince,
+como una prenda de cristal
+en un valle de esmeraldas y acacias.
+
+Tú mi laurel, mantente presente.
+Tú mi profeta, no te escondas
+
+en la salida de los cisnes 
+hacia una rosa posada en un lago cegador.
+ 
+Un racimo joven
+o un capullo en tierra encendida (mojada).
+
+Mi vena está abierta
+y vierte savia para lavar tu costado.
+              </pre>
+            </div>
+            <div class="col-md-6 col-sm-6 col-xs-12">
+              <pre>
+Unión bendita
+que como agua fresca
+cae de un edificio sacrosanto.
+
+Un espejo atildado
+por el correr de la espera y su ley y su comando.
+
+Mariposa, el sol
+es tu reflejo sobre el cielo.
+
+Horas sin dormir,
+mirada sobre mi mirada.
+
+Siente los rastros en tus piernas
+porque mis labios dejan huellas
+en los caminos,
+en la blandura,
+en la piel de tu cuerpo 
+en el verano de mi amor.
+              </pre>
+            </div>
+          </div>  
+      </div>  
+    </div> <!-- /row --> 
   </div> <!-- /container -->
 </section> <!-- /letanias -->
 
-<section id="granadino">
-  <div class="container">
-    <div class="row centered">
+<section id="gra">
+  <div class="container-fluid">
+    <div class="row centered">  
       <div class="col-md-12 col-sm-12 col-xs-12">
-        <h3>Granadino</h3>
-      </div>
-    </div>
+        <%= link_to ("Granadino"), "#granadino", class: "popup-with-zoom-anim"%>
+          <div id="granadino" class="zoom-anim-dialog mfp-hide small-dialog">
+            <div class="col-md-12 col-sm-12 col-xs-12">
+              <h3>Granadino</h3>
+            </div>
+            <div class="col-md-6 col-sm-6 col-xs-12">
+              <pre>
+Tu rostro se alumbra por el sonido de los cascabeles.
+Tus emociones ensangrentadas 
+en el sendero encendidas hacia mi pueblo, 
+tu pueblo y el sol carmesí, 
+ardidos por las flores del ciclamor 
+Y la gente, la gente que mata gente, 
+que se alivian al ver tu dolor.
+
+Resuenan los cascabeles y tu nube flota 
+en el alambrar que enreja en un centro de lodo 
+a bellos braceros por creer que son ajenos 
+y oscuros e insípida bebida, 
+tú les guardas con perfume y ceda tibia.
+
+Ángel de demonios, bestia de oro y sonar aniquilador,
+llévate los azotes de linfa rojiza que rompen tierra fría.
+Tu tierra, dividida en el vidrio seco de culpa y la traición. 
+
+Las campanas del tremor en su bondad 
+ya no dicen nada.
+Una cárcel que inspira te recoge, 
+serpiente envenenada, 
+para dormirte con arrullo eterno 
+de voces Andaluces a castañuelas.
+              </pre>
+            </div>
+            <div class="col-md-6 col-sm-6 col-xs-12">
+              <pre>
+Te vas, Federico, te hicieron morir en tus tierras 
+y por tu tierras,
+donde permanezco para desenvainar tu espada 
+y alzar tu misma adarga
+y albergar tus diez mil manos de higo 
+en mi vientre que es recinto.
+
+Ahora, hombres y mujeres vivos son tu proeza viva
+que se viste de la palabra de la tierra y del amor.
+
+Tierra seca, tierra callada. 
+Cúspide, yo soy tu hermano.
+              </pre>
+            </div>
+          </div>  
+      </div>  
+    </div> <!-- /row --> 
   </div> <!-- /container -->
 </section> <!-- /granadino -->
 
@@ -99,14 +263,143 @@
   <div class="container">
     <div class="row centered">
       <div class="col-md-12 col-sm-12 col-xs-12">
-        <h2>Azul Poema</h2>
-        <h2>Poazu Emal</h2>
-        <h2>Ulpo Emazu</h2>
-        <h2 class="bold">Poema Azul</h2>
+        <h2 class="animated fadeIn">Azul Poema</h2>
+        <h2 class="animated fadeIn">Poazu Emal</h2>
+        <h2 class="animated fadeIn">Ulpo Emazu</h2>
+        <h2 class="animated fadeIn"><strong>Poema Azul</h2>
       </div>
     </div>
   </div> <!-- /container -->
 </section> <!-- /poemaazul -->
+
+<section id="gus">
+  <div class="container-fluid">
+    <div class="row centered">  
+      <div class="col-md-12 col-sm-12 col-xs-12">
+        <%= link_to ("Gustave"), "#gustave", class: "popup-with-zoom-anim"%>
+          <div id="gustave" class="zoom-anim-dialog mfp-hide small-dialog">
+            <div class="col-md-12 col-sm-12 col-xs-12">
+              <h3>Gustave</h3>
+            </div>
+            <div class="col-md-6 col-sm-6 col-xs-12">
+              <pre>
+Las mujeres son venados que te asisten.
+Ve las camelias tristes y alborotadas
+en las tierras negras de tu sien.
+La amargura,
+locura en casa, viva y coleando.
+Esperar es una virtud en condena
+y mis labios observan cual verdugo,
+los tuyos un madero de alheña.
+              </pre>
+            </div>
+            <div class="col-md-6 col-sm-6 col-xs-12">
+              <pre>
+Los hombres son querubines que te asisten
+y la sangre hierve en tu cama.
+El azufre brilla en la cuenca de tu pecho.
+La tenacidad,
+la veracidad,
+la fuerza está en el arrebato. 
+Recibir es orgullo de Magdalenas
+y la cruz en mis piernas
+se pinta de tu silueta y tu cautela.
+              </pre>
+            </div>
+          </div>  
+      </div>  
+    </div> <!-- /row --> 
+  </div> <!-- /container -->
+</section> <!-- /gustave -->
+
+<section id="the">
+  <div class="container-fluid">
+    <div class="row centered">  
+      <div class="col-md-12 col-sm-12 col-xs-12">
+        <%= link_to ("Theseus' Bay"), "#theseus", class: "popup-with-zoom-anim"%>
+          <div id="theseus" class="zoom-anim-dialog mfp-hide small-dialog">
+            <div class="col-md-12 col-sm-12 col-xs-12">
+              <h3>Theseus' Bay</h3>
+            </div>
+            <div class="col-md-6 col-sm-6 col-xs-12">
+              <pre>
+What means to wake up alone to me?
+How does it feel to wake up alone to me?
+
+Tell me I'm good while I'm waiting
+for your ship to arrive to the shore, I'm waiting.
+Pray I command all the winds in your favor
+and guide all your stars safe to me.
+
+But we promised ourselves not to be tangled by love,
+always to believe in the bright of greater goals.
+              </pre>
+            </div>
+            <div class="col-md-6 col-sm-6 col-xs-12">
+              <pre>
+I rose every morning to sing among willows
+So the sea could be tinted with tears and blue petals.
+Extend your flawed sight to the beackon of heaven
+that lays within me, afraid to fail. 
+
+Do we promise ourselves to allow this vain despair?
+Have you always believed in the bright of greater goals?
+
+I was still trying to stay here for you,
+I keep on lying that my tears are shed for you,
+that all this fighting was worth for a feigned return.
+But now through this roaring bay
+I declare my deafeat in perpetual grace.
+
+A life after you.
+              </pre>
+            </div>
+          </div>  
+      </div>  
+    </div> <!-- /row --> 
+  </div> <!-- /container -->
+</section> <!-- /theseus -->
+
+<section id="bur">
+  <div class="container-fluid">
+    <div class="row centered">  
+      <div class="col-md-12 col-sm-12 col-xs-12">
+        <%= link_to ("A Bursting Thing"), "#bursting", class: "popup-with-zoom-anim"%>
+          <div id="bursting" class="zoom-anim-dialog mfp-hide small-dialog">
+            <div class="col-md-12 col-sm-12 col-xs-12">
+              <h3>A Bursting Thing</h3>
+            </div>
+            <div class="col-md-6 col-sm-6 col-xs-12">
+              <pre>
+Who said I was not alive?
+Who claimed it was for a while?
+I went on crawling like I was about to die,
+who kept saying that everything was allright?
+
+True love fits in one hand.
+I sought the feeling and saw where it laid,
+the strangest fire.
+And my heart was breaking, 
+my heart was all I had.
+That bursting thing is truly not what I am.
+              </pre>
+            </div>
+            <div class="col-md-6 col-sm-6 col-xs-12">
+              <pre>
+Things get complicated when you walk the road alone.
+Things feel complicated when people say you are torn.
+
+Bring the night so he's gone.
+Free my arms so I can fight.
+Give me my will so I can rise.
+But keep my name, so he can realize.
+              </pre>
+            </div>
+          </div>  
+      </div>  
+    </div> <!-- /row --> 
+  </div> <!-- /container -->
+</section> <!-- /bursting -->
 
 <div class="line"></div>
 
