--- a/app/assets/stylesheets/pages.scss.erb
+++ b/app/assets/stylesheets/pages.scss.erb
@@ -13,7 +13,7 @@ body {
 } 
 
 #intro {
-  height: 75rem;
+  height: auto;
   background-position: center top;
   background-color: transparent;
   background-repeat: no-repeat;
