sprocket for background image

--- a/app/assets/stylesheets/pages.scss.erb
+++ b/app/assets/stylesheets/pages.scss.erb
@@ -9,7 +9,7 @@ $background-grey: #f2f2f2;
 
 body {
   height: 246rem;
-  background-image: url(/assets/background.jpg);
+  background-image: image-url("background.jpg")
 } 
 
 #intro {
