sprocket for background image, gem for integrating magnific-popup to assets pipeline

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -223,7 +223,7 @@ hr {
 
 /* Images */
 .kostya {
-  background-image:url(/assets/estrellas.png);
+  background-image: image-url("estrellas.png")
 }
 
 .luna {
