--- a/app/assets/stylesheets/pages.scss.erb
+++ b/app/assets/stylesheets/pages.scss.erb
@@ -38,15 +38,23 @@ body {
   background: transparent;
 }
 
-.copyright {
-  font-family: 'Geo', sans-serif;
-  font-weight: 100;
-  font-size: 1rem;
-  float: left; 
-  @media (max-width: 991px) {
-    float: none;
-    text-align: center;
-  } 
+.icon {
+  height: 0.9rem;
+  width: auto;
+  display: inline-block;
+  float: center;
+  padding-left: 2.1rem;
+  padding-right: 2.1rem;
+  margin-bottom: 2rem;
+}
+
+.icon:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+#icons {
+  padding-top: 2rem;
 }
 
 .amor {
