--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -339,8 +339,8 @@ always to believe in the bright of greater goals.
               <pre>
 I rose every morning to sing among willows
 So the sea could be tinted with tears and blue petals.
-Extend your flawed sight to the beackon of heaven
-that lays within me, afraid to fail. 
+Extend your flawed sight to the beacon of heaven
+that hides within me, afraid to give in. 
 
 Do we promise ourselves to allow this vain despair?
 Have you always believed in the bright of greater goals?
@@ -401,8 +401,6 @@ But keep my name, so he can realize.
   </div> <!-- /container -->
 </section> <!-- /bursting -->
 
-<div class="line"></div>
-
 <div id="izquierda"></div>
 <div id="derecha"></div>
 <div id="arriba"></div>
@@ -411,11 +409,18 @@ But keep my name, so he can realize.
 </body>
 
 <footer>
-  <div class="container centered">
+  <div class="container-fluid centered">
     <div class="row">
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <h2 class="copyright">Nacho Galindo</h2>
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <h4>Nacho Galindo</h4>
+        <div class="line centered"></div>
       </div> 
+      <div id="icons" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <%= link_to (image_tag "soundcloud.png", class: "img-responsive center-block icon"), "https://soundcloud.com/nacho-galindo-1", target: "_blank" %>
+        <%= link_to (image_tag "twitter.png", class: "img-responsive center-block icon"), "https://twitter.com/nachogalmo", target: "_blank" %>
+        <%= link_to (image_tag "instagram.png", class: "img-responsive center-block icon"), "https://www.instagram.com/ignagalmo/", target: "_blank" %>
+        <%= link_to (image_tag "youtube.png", class: "img-responsive center-block icon"), "https://www.youtube.com/channel/UCvFsor5uGhyla6ClnPwsiHg", target: "_blank" %>
+        <%= link_to (image_tag "github.png", class: "img-responsive center-block icon"), "https://github.com/nachogal", target: "_blank" %>
     </div>  
   </div>
 </footer>
