titles order and layout

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -291,12 +291,12 @@ locura en casa, viva y coleando.
 Esperar es una virtud en condena
 y mis labios observan cual verdugo,
 los tuyos un madero de alheña.
+Los hombres son querubines que te asisten
+y la sangre hierve en tu cama.
               </pre>
             </div>
             <div class="col-md-6 col-sm-6 col-xs-12">
               <pre>
-Los hombres son querubines que te asisten
-y la sangre hierve en tu cama.
 El azufre brilla en la cuenca de tu pecho.
 La tenacidad,
 la veracidad,
@@ -418,7 +418,7 @@ But keep my name, so he can realize.
       <div id="icons" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <%= link_to (image_tag "soundcloud.png", class: "img-responsive center-block icon"), "https://soundcloud.com/nacho-galindo-1", target: "_blank" %>
         <%= link_to (image_tag "twitter.png", class: "img-responsive center-block icon"), "https://twitter.com/nachogalmo", target: "_blank" %>
-        <%= link_to (image_tag "instagram.png", class: "img-responsive center-block icon"), "https://www.instagram.com/ignagalmo/", target: "_blank" %>
+        <%= link_to (image_tag "instagram.png", class: "img-responsive center-block icon"), "", target: "_blank" %>
         <%= link_to (image_tag "youtube.png", class: "img-responsive center-block icon"), "https://www.youtube.com/channel/UCvFsor5uGhyla6ClnPwsiHg", target: "_blank" %>
         <%= link_to (image_tag "github.png", class: "img-responsive center-block icon"), "https://github.com/nachogal", target: "_blank" %>
     </div>  
