--- a/app/assets/stylesheets/pages.scss.erb
+++ b/app/assets/stylesheets/pages.scss.erb
@@ -38,8 +38,40 @@ body {
   background: transparent;
 }
 
+#vic {
+  padding: 10rem 0rem 5rem 10rem;
+}
+
+#emi {
+  padding: 19rem 5rem 5rem 0rem;
+}
+
+#let {
+  padding: 8rem 20rem 5rem 0rem;
+}
+
+#gra {
+  padding: 0rem 0rem 5rem 25rem;
+}
+
+#poemaazul {
+  padding: 15rem 0rem 5rem 0rem;
+}
+
+#gus {
+  padding: 17rem 20rem 5rem 0rem;
+}
+
+#the {
+  padding: 35rem 0rem 5rem 10rem;
+}
+
+#bur {
+  padding: 15rem 27rem 5rem 0rem;
+}
+
 .icon {
-  height: 0.9rem;
+  height: 0.8rem;
   width: auto;
   display: inline-block;
   float: center;
@@ -54,7 +86,7 @@ body {
 }
 
 #icons {
-  padding-top: 2rem;
+  padding-top: 2.5rem;
 }
 
 .amor {
@@ -77,7 +109,7 @@ body {
 }
 
 footer {
-  padding: 20px 0;
+  padding: 8rem 0rem 0rem 0rem;
   p {
     margin: 0;
   }
