--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -59,7 +59,9 @@
           <div id="victoria" class="zoom-anim-dialog mfp-hide small-dialog">
             <div class="col-md-12 col-sm-12 col-xs-12">
               <h3>Victoria</h3>
+              <%= render "layouts/player" %>  
             </div>
+
             <div class="col-md-6 col-sm-6 col-xs-12">
               <pre>
 Take what you wanna take,
@@ -106,9 +108,11 @@ I’m free lender, I do surrender to any game.
       <div class="col-md-12 col-sm-12 col-xs-12">
         <%= link_to ("Emisario"), "#emisario", class: "popup-with-zoom-anim"%>
           <div id="emisario" class="zoom-anim-dialog mfp-hide small-dialog">
-            <div class="col-md-12 col-sm-12 col-xs-12">
+            <div class="col-md-12 col-sm-12 col-xs-12"> <!-- /title -->
               <h3>Emisario</h3>
-            </div>
+              <%= render "layouts/player" %>
+            </div> <!-- /title -->
+
             <div class="col-md-6 col-sm-6 col-xs-12">
               <pre>
 Si amanece bajo el puente una estrella cubierta de cobre
@@ -145,6 +149,7 @@ Y me envuelve otra vez.
           <div id="letanias" class="zoom-anim-dialog mfp-hide small-dialog">
             <div class="col-md-12 col-sm-12 col-xs-12">
               <h3>Letanías</h3>
+              <%= render "layouts/player" %> 
             </div>
             <div class="col-md-6 col-sm-6 col-xs-12">
               <pre>
@@ -208,6 +213,7 @@ en el verano de mi amor.
           <div id="granadino" class="zoom-anim-dialog mfp-hide small-dialog">
             <div class="col-md-12 col-sm-12 col-xs-12">
               <h3>Granadino</h3>
+              <%= render "layouts/player" %> 
             </div>
             <div class="col-md-6 col-sm-6 col-xs-12">
               <pre>
@@ -280,6 +286,7 @@ Cúspide, yo soy tu hermano.
           <div id="gustave" class="zoom-anim-dialog mfp-hide small-dialog">
             <div class="col-md-12 col-sm-12 col-xs-12">
               <h3>Gustave</h3>
+              <%= render "layouts/player" %> 
             </div>
             <div class="col-md-6 col-sm-6 col-xs-12">
               <pre>
@@ -320,6 +327,7 @@ se pinta de tu silueta y tu cautela.
           <div id="theseus" class="zoom-anim-dialog mfp-hide small-dialog">
             <div class="col-md-12 col-sm-12 col-xs-12">
               <h3>Theseus' Bay</h3>
+              <%= render "layouts/player" %> 
             </div>
             <div class="col-md-6 col-sm-6 col-xs-12">
               <pre>
@@ -368,6 +376,7 @@ A life after you.
           <div id="bursting" class="zoom-anim-dialog mfp-hide small-dialog">
             <div class="col-md-12 col-sm-12 col-xs-12">
               <h3>A Bursting Thing</h3>
+              <%= render "layouts/player" %> 
             </div>
             <div class="col-md-6 col-sm-6 col-xs-12">
               <pre>
